:lipstick: Fix images being too large in icon selector (dashboards and Designer)
Note: The widget still needs a more aggressive refactoring to render nicely...

--- a/css/light-grey.scss
+++ b/css/light-grey.scss
@@ -3353,6 +3353,19 @@ table.listResults .originColor{
 }
 .menu-icon-select > .ui-menu-item{
 	padding: .3em 3%;
+
+	> *{
+		width: 100%;
+		white-space: nowrap;
+		overflow-x: hidden;
+		text-overflow: ellipsis;
+
+		> img{
+			max-width: 80px;
+			max-height: 45px;
+			margin-right: 10px;
+		}
+	}
 }
 
 //////////////////////
